# library

./: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  buildlibrary.bat  buildlibrary.sh  config.h.in  configure  configure.ac  library  library.c
src/: library.c
